# Wzlz

./: .gitignore  CONTRIBUTING.md  FRAMEWORK_DESIGN.md  GAME_RULES.md  LICENSE  MEMORY_READING_QUICKSTART.md  MEMORY_READING_SUMMARY.md  QUICKSTART.md  QUICK_START_UV.md  README.md  TRACKING_TOOL_SUMMARY.md  find_process_name.py  game_window_config.json  pyproject.toml  unified_capture.py
docs/: GAME_CLIENT_INTEGRATION.md  GAME_RULES_CLARIFICATION.md  GAME_STATE_EXTRACTION.md  IMAGE_CAPTURE_GUIDE.md  IMAGE_RECOGNITION_GUIDE.md  MEMORY_READING_ARCHITECTURE.md  MEMORY_READING_GUIDE.md  READING_COMPARISON.md  TRACKING_WORKFLOW.md
examples/: AUTO_PLAY_TRACKING.md  README_MEMORY.md  TRACKING_GUIDE.md  adjust_board_rect.py  calibrate_game_window.py  capture_and_detect.py  capture_window.py  debug_from_screenshot.py  debug_grid_detection.py  debug_next_balls.py  demo_game_rules.py  example_usage.py  explore_memory.py  find_game_process.py  game_rules_template.py  manual_calibrate.py  manual_calibrate_all.py  play_full_game.py  read_game_state.py  setup_game_client.py  test_bounce_capture.py  test_cell_selection.py  test_full_game_with_reset.py  test_game_client_env.py  test_game_over_popup.py  test_game_reset.py  test_image_capture.py  test_live_capture.py  test_live_move.py  test_manual_game_over.py  test_memory_reading.py  test_multiple_moves.py  test_popup_auto.py  test_popup_debug.py  test_popup_detection.py  test_popup_manual_verify.py  test_reset_with_popup.py  track_and_analyze_memory.py  unified_capture.py
tests/: test_framework.py  test_game_rules.py
(+7 files in other folders)
