[project]
name = "wzlz-ai"
version = "0.1.0"
description = "AI framework for training models to play the ball matching game (五子连珠)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "gol2em" }
]
keywords = ["ai", "game", "reinforcement-learning", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
game-client = [
    "pillow>=9.0.0",
    "pyautogui>=0.9.53",
    "pytesseract>=0.3.10",
]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/gol2em/Wzlz"
Repository = "https://github.com/gol2em/Wzlz"
Issues = "https://github.com/gol2em/Wzlz/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"
